--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:android="http://schemas.android.com/apk/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android1="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -18,6 +23,185 @@
             ads:adUnitId="@string/admob_banner_ad_unit_id"
             android:background="@color/white"
             android:id="@+id/adView"
+            ads:layout_constraintBottom_toBottomOf="parent"
+            ads:layout_constraintEnd_toEndOf="parent"
+            ads:layout_constraintStart_toStartOf="parent"
+            ads:layout_constraintTop_toBottomOf="@+id/constraint_layout_generate_container" />
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android1:id="@+id/coordinator_layout_icon_extra_part_container"
+            layout_height="0dp"
+            layout_width="0dp"
+            android1:background="@color/background"
+            app:layout_constraintBottom_toTopOf="@+id/view_drop_shadow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/image_view_generate_active" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_generate_container"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/height_56"
+            android:background="@color/white"
+            ads:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toStartOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_scan_container"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/height_56"
+            android:background="@color/white"
+            ads:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toStartOf="@+id/constraint_layout_history_container"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_layout_history_container"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/height_56"
+            android:background="@color/white"
+            ads:layout_constraintBottom_toTopOf="@+id/adView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintTop_toBottomOf="@+id/view_drop_shadow" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_generate"
+            android:layout_width="@dimen/width_24"
+            android:layout_height="@dimen/height_24"
+            android:src="@drawable/ic_generate_active"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_generate"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_generate_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_generate_container" />
+
+        <TextView
+            android:id="@+id/text_view_generate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_small_body"
+            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_generate_container"
+            app:layout_constraintTop_toBottomOf="@id/image_view_generate" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_scan"
+            android:layout_width="@dimen/width_24"
+            android:layout_height="@dimen/height_24"
+            android:src="@drawable/ic_scan_active"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_scan"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_scan_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_scan_container"
+
+            />
+
+        <TextView
+            android:id="@+id/text_view_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/text_smaller_body"
+            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_scan_container"
+            app:layout_constraintTop_toBottomOf="@id/image_view_scan" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_history"
+            android:layout_width="@dimen/width_24"
+            android:layout_height="@dimen/height_24"
+            android:src="@drawable/ic_history_inactive"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_history"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_history_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_history_container"
+
+            />
+
+        <TextView
+            android:id="@+id/text_view_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/history"
+            android:textSize="@dimen/text_smaller_body"
+            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout_history_container"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_history_container"
+            app:layout_constraintTop_toBottomOf="@id/image_view_history" />
+
+
+        <View
+            android:id="@+id/view_drop_shadow"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/height_1"
+            android:background="@color/shadow"
+            app:layout_constraintBottom_toTopOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/coordinator_layout_icon_extra_part_container" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_generate_active"
+            android:layout_width="@dimen/width_60"
+            android:layout_height="@dimen/height_60"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:src="@drawable/ic_generate_active"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_generate"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_generate_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_generate_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_generate_container"
+
+            />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_scan_active"
+            android:layout_width="@dimen/width_60"
+            android:layout_height="@dimen/height_60"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:src="@drawable/ic_scan_active"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_scan"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_scan_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_scan_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_scan_container"
+
+            />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image_view_history_active"
+            android:layout_width="@dimen/width_60"
+            android:layout_height="@dimen/height_60"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:src="@drawable/ic_history_active"
+            app:layout_constarintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@+id/text_view_history"
+            app:layout_constraintEnd_toEndOf="@+id/constraint_layout_history_container"
+            app:layout_constraintStart_toStartOf="@id/constraint_layout_history_container"
+            app:layout_constraintTop_toTopOf="@id/constraint_layout_history_container"
+
+            />
+
+
+        <qr
+
+
+
+
+
+
 
 
 
