--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
-    xmlns:android1="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -18,24 +14,23 @@
 
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
-            layout_height="wrap_content"
-            layout_width="0dp"
             android:background="@color/white"
             ads:adSize="SMART_BANNER"
             ads:adUnitId="@string/admob_banner_ad_unit_id"
             ads:layout_constraintBottom_toBottomOf="parent"
             ads:layout_constraintEnd_toEndOf="parent"
             ads:layout_constraintStart_toStartOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             ads:layout_constraintTop_toBottomOf="@+id/constraint_layout_generate_container" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android1:id="@+id/coordinator_layout_icon_extra_part_container"
-            layout_height="0dp"
-            layout_width="0dp"
-            android1:background="@color/background"
+            android:id="@+id/coordinator_layout_icon_extra_part_container"
+            android:layout_width="0dp"
             app:layout_constraintBottom_toTopOf="@+id/view_drop_shadow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="@+id/image_view_generate_active" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -194,6 +189,38 @@
 
             />
 
+        <View
+            android:id="@+id/status_bar"
+            android:layout_width="0dp"
+            android:layout_height="12dp"
+            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
+            app:layout_constraintBottom_toTopOf="@+id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/toolbar_height"
+            android:background="@drawable/gradient_title_bar_primary_color_and_accent_color"
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+            app:contentInsetStartWithNavigation="@dimen/margin_0"
+            app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_fragment_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/status_bar" />
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinator_layout_fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/coordinator_layout_icon_extra_part_container"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
